load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_RULES_BOOST_COMMIT = "9c94d41fbae310a95d80a9189566bb5db05c2bcf"

http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "a5313101680002a071648d01915b67a82a997e55b49afdf2d6f7c2c716263cd8",
    strip_prefix = "rules_boost-%s" % _RULES_BOOST_COMMIT,
    urls = [
        "https://github.com/nelhage/rules_boost/archive/%s.tar.gz" % _RULES_BOOST_COMMIT,
    ],
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
